positioned the recipe card. attempting to position the ingredients accurately

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="recipieL">
           <ul class="items">
             <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis">1 1/2 cups milk</label></li>
-            <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis"></label>1/2 cup mascarpone</label></li>
+            <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis"></label>1/2 cup mascarpone</label></li>
             <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis">1/2 tsp pink salt</label></li>
             <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis">1 lb Black Mission Figs</label></li>
             <li><input name="packersOff" class="strikethrough" value="1" type="checkbox"><label for="packersOff" class="strikeThis">1/2 cup brown sugar</label></li>
@@ -122,14 +122,14 @@
           </ul>
         </div>
 
-        <div class="form-group ">
+        <!-- <div class="form-group ">
             <label for="inputName" class="col-md-1 control-label">select</label>
             <div class="col-md-5">
              
                 <input name="packersOff" class="strikethrough" value="1" type="checkbox">
                 <label for="packersOff" class="strikeThis">sssssssss</label>
               
-            </div>
+            </div> -->
           </div>
 
 
